[gd_scene load_steps=3 format=2]

[ext_resource path="res://Testing/Node.gd" type="Script" id=1]
[ext_resource path="res://addons/algodot/gdnative/algod.gdns" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.5
margin_top = -116.5
margin_right = 104.5
margin_bottom = -43.5
text = "Get Data"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -7.0
margin_right = 192.0
margin_bottom = 65.0
text = "Data = "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Algod" type="Node" parent="."]
script = ExtResource( 2 )
url = "http://localhost:4001"
token = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="account_info" from="Algod" to="." method="_on_Algod_account_info"]
[connection signal="status" from="Algod" to="." method="_on_Algod_status"]
[connection signal="suggested_transaction_params" from="Algod" to="." method="_on_Algod_suggested_transaction_params"]
[connection signal="transaction_confirmed" from="Algod" to="." method="_on_Algod_transaction_confirmed"]
[connection signal="transaction_sent" from="Algod" to="." method="_on_Algod_transaction_sent"]
